syntax = "proto3";
package iconlake.icon;

option go_package = "iconlake/x/icon/types";

message IconData {
  string author      = 1;
  string name        = 2;
  string description = 3;
  int64  create_time = 4;
}

message IconDataRaw {
  bytes  author      = 1;
  string name        = 2;
  string description = 3;
  int64  create_time = 4;
}
