syntax = "proto3";
package iconlake.iconlake;

option go_package = "iconlake/x/iconlake/types";

message Account {
  bytes accAddress = 1; 
  int64 lastMintDropTime = 2; 
}

